--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -125,6 +125,7 @@ jobs:
         path: 3p-package-source/package-system/**/temp
         key: ${{ matrix.package }}-${{ matrix.os }}
         restore-keys: |
+          ${{ matrix.package }}
           ${{ matrix.package }}-${{ matrix.os }}
           ${{ matrix.package }}-${{ matrix.os }}-
         
