--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -118,16 +118,12 @@ jobs:
       if: runner.os == 'Windows'
       uses: ilammy/msvc-dev-cmd@v1.12.0
 
-    - name: Restore build artifacts
-      id: cache-build-restore
-      uses: actions/cache/restore@v3
+    - name: Cache build artifacts
+      uses: actions/cache@v3
+      if: always()
       with:
         path: 3p-package-source/package-system/**/temp
         key: ${{ matrix.package }}-${{ matrix.os }}
-        restore-keys: |
-          ${{ matrix.package }}
-          ${{ matrix.package }}-${{ matrix.os }}
-          ${{ matrix.package }}-${{ matrix.os }}-
         
     - name: Run build command
       if: ${{ !contains(matrix.package, 'aarch64') }}
@@ -157,14 +153,6 @@ jobs:
           lsb_release -a
           uname -a
 
-    - name: Cache build artifacts
-      id: cache-build-save
-      uses: actions/cache/save@v3
-      if: always()
-      with:
-        path: 3p-package-source/package-system/**/temp/*
-        key: ${{ steps.cache-build-restore.outputs.cache-primary-key }}
-      
     - name: Upload packages
       uses: actions/upload-artifact@v3
       with:
