--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -29,8 +29,13 @@ jobs:
             apt-get install -y build-essential cmake curl git libssl-dev libffi-dev libbz2-dev libgdbm-compat-dev libgdbm-dev liblzma-dev libreadline-dev libtool \
               ninja-build python3 python3-pip tcl8.6-dev tk8.6-dev texinfo software-properties-common
             python3 -m pip install boto3 certifi
-            curl -L 'https://github.com/mozilla/sccache/releases/download/v${{ env.SCCACHE_VER }}/sccache-v${{ env.SCCACHE_VER }}-aarch64-unknown-linux-musl.tar.gz' | tar xzf - -O --wildcards '*/sccache' > '/usr/local/bin/sccache'
+            curl -L 'https://github.com/mozilla/sccache/releases/download/v0.5.4/sccache-v0.5.4-aarch64-unknown-linux-musl.tar.gz' \
+              | tar xzf - -O --wildcards '*/sccache' > '/usr/local/bin/sccache'
             chmod +x '/usr/local/bin/sccache'
           run: |
             lsb_release -a
             uname -a
+            sccache --version
+            cmake --version
+            git --version
+            python3 --version
