--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -1,5 +1,5 @@
 # This automation builds a aarch64 Ubuntu container
-name: Build aarch64 Ubuntu container
+name: Build Container
 
 on:
   # Allows you to run this workflow manually from the Actions tag
