--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -150,13 +150,13 @@ jobs:
           --volume "${PWD}/3p-package-source:/3p-package-source"
         shell: /bin/bash
         run: |
+          lsb_release -a
+          uname -a
           env SCCACHE_IDLE_TIMEOUT=0 SCCACHE_DIR='/3p-package-source'/.sccache SCCACHE_CACHE_SIZE='2048M' sccache --start-server
           sccache -z
           export CMAKE_CXX_COMPILER_LAUNCHER=sccache
           export CMAKE_C_COMPILER_LAUNCHER=sccache
-          # python3 /3p-package-scripts/o3de_package_scripts/build_package.py --search_path /3p-package-source/ ${{ matrix.package }}
-          lsb_release -a
-          uname -a
+          python3 /3p-package-scripts/o3de_package_scripts/build_package.py --search_path /3p-package-source/ ${{ matrix.package }}
 
     - name: Upload packages
       uses: actions/upload-artifact@v3
