--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -116,23 +116,25 @@ jobs:
       if: runner.os == 'Windows'
       uses: ilammy/msvc-dev-cmd@v1.12.0
 
-    - name: Use ccache
-      uses: hendrikmuhs/ccache-action@v1.2.10
-      with:
-        variant: sccache
-        max-size: 2048M
-        key: ${{ matrix.package }}
-        restore-keys:
-          ${{ matrix.package }}-
+    - name: Run sccache-cache
+      uses: mozilla-actions/sccache-action@v0.0.3
         
     - name: Run build command
       if: ${{ !contains(matrix.package, 'aarch64') }}
       env:
+        SCCACHE_GHA_ENABLED: "true"
         CMAKE_CXX_COMPILER_LAUNCHER: sccache
         CMAKE_C_COMPILER_LAUNCHER: sccache
       run: |
         python3 3p-package-scripts/o3de_package_scripts/build_package.py --search_path 3p-package-source ${{ matrix.package }}
-
+  
+    - name: Cache aarch64 sccache
+      if: contains(matrix.package, 'aarch64')
+      uses: actions/cache@v3
+      with:
+        path: 3p-package-source/.sccache
+        key: ${{ matrix.package }}-sccache
+    
     - name: Run build command (aarch64)
       if: contains(matrix.package, 'aarch64')
       uses: uraimo/run-on-arch-action@v2
