--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -163,14 +163,14 @@ jobs:
           SCCACHE_CACHE_SIZE: 2048M
         shell: /bin/bash
         install: |
-          apt-get install timeout
+          apt-get install timeout -y
         run: |
           lsb_release -a
           uname -a
           sccache --start-server
           sccache -z
           ls -lah /3p-package-source/.cache
-          timout 350m python3 /3p-package-scripts/o3de_package_scripts/build_package.py --search_path /3p-package-source/ ${{ matrix.package }} ; sccache --stop-server
+          timeout 350m python3 /3p-package-scripts/o3de_package_scripts/build_package.py --search_path /3p-package-source/ ${{ matrix.package }} ; sccache --stop-server
 
     - name: Upload packages
       uses: actions/upload-artifact@v3
